Added images and ability types

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,6 @@
     "default_title": "pokeLookup"
   },
   // "content_security_policy": "script-src 'self' https://bulbapedia.bulbagarden.net/; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
   "permissions": ["http://*/"]
 }
