--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
   "name": "Battledex",
-  "version": "0.1.0",
+  "version": "1.0.0",
 
-  "description": "Looks up a Pokemon and displays its weaknesses and strengths",
+  "description": "A Pokedex Chrome extension that looks up Pokemon and its abilities.",
   "icons": {
     "16": "icon.png",
     "48": "icon48.png",
@@ -16,6 +16,6 @@
     "default_title": "Battledex"
   },
 
-  "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://pokeapi.co; object-src 'self'",
   "permissions": ["http://*/"]
 }
