--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Battledex",
-  "version": "1.0.2",
-
+  "version": "1.0.4",
   "description": "A Pokedex Chrome extension that looks up Pokemon and its abilities.",
   "icons": {
     "16": "icon.png",
@@ -14,5 +13,5 @@
     "default_popup": "popup.html",
     "default_title": "Battledex"
   },
-  "content_security_policy": "script-src 'self' https://pokeapi.co; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://pokeapi.co; object-src 'self'"
 }
